# forge

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
src/: error.rs  lib.rs  main.rs  types.rs
src/cli/: build.rs  clean.rs  commands.rs  mod.rs  new.rs  serve.rs
src/config/: mod.rs  types.rs
src/content/: frontmatter.rs  loader.rs  markdown.rs  mod.rs  page.rs  post.rs
src/i18n/: translator.rs
src/output/: assets.rs  feed.rs  mod.rs  search_index.rs  sitemap.rs  writer.rs
src/pipeline/: incremental.rs  mod.rs  orchestrator.rs
src/plugin/: hooks.rs  registry.rs
src/render/: context.rs  engine.rs  mod.rs  pagination.rs
src/server/: http.rs
src/taxonomy/: builder.rs  mod.rs
themes/default/: theme.toml
themes/default/static/css/: style.css  syntax.css
themes/default/static/js/: search.js
themes/default/templates/: 404.html  archive.html  base.html  index.html  page.html  post.html  taxonomy.html  taxonomy_single.html
themes/default/templates/partials/: footer.html  header.html  pagination.html  post_card.html
