[package]
name = "forge"
version = "0.1.0"
edition = "2021"
description = "A high-performance static blog generator"
license = "MIT"

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Templates
tera = "1.20"

# Markdown
pulldown-cmark = { version = "0.13", features = ["simd"] }

# Syntax highlighting
syntect = "5.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
toml = "0.8"

# Web server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "set-header"] }
tower-livereload = "0.9"
tokio = { version = "1", features = ["full"] }

# File watching
notify = "8"
notify-debouncer-mini = "0.5"

# Parallelism
rayon = "1.10"

# Hashing
blake3 = "1.5"

# RSS
rss = "2.0"

# Sitemap
quick-xml = "0.37"

# Dates
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Directory traversal
walkdir = "2.5"

# URL slugs
slug = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
